@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix SQL query for contacts listing on MS SQL Server (#1488505)
 - Update to TinyMCE 3.5.2
 - Fix window.resize handler on IE8 and Opera (#1488453)
 - Don't let error message popups cover the login form (#1488500)
